--- a/index.html
+++ b/index.html
@@ -17,30 +17,23 @@
   </head>
   <body>
     <header>
-        <ul class="h_menu">
+      <div class="h_menu">
+        <ul>
           <li><a href="./index.html">Inicio</a></li>
           <li><a href="pages/nosotros.html">Nosotros</a></li>
           <li><a href="pages/blog.html">Blog</a></li>
           <li><a href="pages/tienda.html">Tienda</a></li>
           <li><a href="pages/contacto.html">Contacto</a></li>
         </ul>
-      <div class="h_logo">
-        <p>Logo</p>
-      </div>
+          <div class="logo">
+          <img src="./imagenes/logo.png" alt="logo"></div>
+        </div>
+        <div class="h_principal_banner">
+    <img src="./imagenes/wall.jpg" alt="imagen">
     </div>
-
-<div class="h_banner">
-    <img src="./imagenes/living-room-candles.jpeg" alt="imagen">
-</div>
-
-  
-    
-    <div class="box"></div>
-
     </header>
-
     <main>
-      <p class="i_main_parrafo">
+      <p class="m_parrafo">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo facilis
         fugit at suscipit! Sunt aut ad nihil temporibus sapiente obcaecati
         itaque necessitatibus laborum praesentium placeat cumque, blanditiis
@@ -69,14 +62,45 @@
         reprehenderit maxime voluptate est, delectus, quam iure numquam cumque
         optio. Eligendi exercitationem dolores dicta eaque eius.
       </p>
-    </main>
 
+      <div class="colecciones">
+        <h1>NUESTRAS COLECCIONES</h1>
+      </div>
+
+      <div class="m_tipo_candles">
+        <div>
+          <h3>Candles Premium</h3>
+          <p>Nuestras Candles Premium son elaboradas manualmente, personalizadas por y para nuestros clientes con detalles exclusivos dependiendo de sus gustos.</p>
+          <img src="./imagenes/Imagenes index/premium.png" alt="Premium">
+        </div>
+        <div>
+          <h3>Candles de Frutas</h3>
+          <p>Nuestras Candles de frutas son elaboradas manualmente, seleccionada por nuestros clientes dependiendo de sus gustos de aroma de frutas.</p>
+          <img src="./imagenes/Imagenes index/fruts.png" alt="Frutas">
+        </div>
+        <div>
+          <h3>Candles Aromateraphy</h3>
+          <p>Nuestras Candles Aromateraphy son elaboradas manualmente con elementos y hiervas finas, para brindar la sensacion de relajacion y tranquilidad a nuestros clientes.</p>        
+          <img src="./imagenes/Imagenes index/aromateraphy.png" alt="Aromatheraphy">
+        </div>
+        </div>
+    </main>
     <footer>
-      <ul>
-        <li><i class="fa-brands fa-facebook-f"></i></li>
-        <li></li>
-      </ul>
-      <p>*copyright</p>
+      <div class="information">
+        <div>
+          <img src="./icons/facebook.png" alt="fc">
+        </div>
+        <div>
+          <img src="./icons/imsta.png" alt="imsta">
+        </div>
+        <div>
+            <img src="./icons/whatsapp.png" alt="whatsapp">
+        </div>
+      </div>
+      <div class="foot">
+      <img src="./imagenes/banner footer.png" alt="footer_banner">
+      <p>& CANDLES LIGHTS by Leidy Cardoso</p>
+      </div>
     </footer>
   </body>
 </html>
