--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -32,15 +32,20 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul class="h_menu">
+      <div class="h_menu">
+        <ul>
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="./nosotros.html">Nosotros</a></li>
           <li><a href="./blog.html">Blog</a></li>
           <li><a href="./tienda.html">Tienda</a></li>
           <li><a href="./contacto.html">Contacto</a></li>
         </ul>
-      </nav>
+          <div class="logo">
+          <img src="../imagenes/logo.png" alt="logo"></div>
+        </div>
+        <div class="h_principal_banner">
+    <img src="../imagenes/wall.jpg" alt="imagen">
+    </div>
     </header>
 
     <main>
@@ -52,12 +57,26 @@
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+          allowfullscreen>
+        </iframe>
       </div>
     </main>
     <footer>
-      <p>*copyright</p>
+        <div class="information">
+          <div>
+            <img src="../icons/facebook.png" alt="fc">
+          </div>
+          <div>
+            <img src="../icons/imsta.png" alt="imsta">
+          </div>
+          <div>
+              <img src="../icons/whatsapp.png" alt="whatsapp">
+          </div>
+        </div>
+        <div class="foot">
+        <img src="../imagenes/banner footer.png" alt="footer_banner">
+        <p>& CANDLES LIGHTS by Leidy Cardoso</p>
+        </div>
     </footer>
   </body>
 </html>
