--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -16,20 +16,25 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="h_menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./tienda.html">Tienda</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+        <div class="h_menu">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./nosotros.html">Nosotros</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./tienda.html">Tienda</a></li>
+            <li><a href="./contacto.html">Contacto</a></li>
+          </ul>
+            <div class="logo">
+            <img src="../imagenes/logo.png" alt="logo"></div>
+          </div>
+  
+          <div class="h_principal_banner">
+      <img src="../imagenes/wall.jpg" alt="imagen">
+      </div>
+      </header>
 
     <main>
         <h2>Nuestros Productos</h2>
-
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, temporibus veniam veritatis expedita, quam harum fugit autem atque id quidem, est distinctio non? Molestiae maiores nobis delectus facere nisi earum!
         Magnam dolore voluptatum consectetur laboriosam quis, vel eius mollitia in recusandae aut accusamus animi, sed dolores numquam. Et vitae delectus facere voluptas vel, atque officia magnam omnis, dolorem dolor necessitatibus.
@@ -52,12 +57,24 @@
         Repellendus iste repudiandae hic doloribus, quos molestiae, corrupti voluptas deserunt id aspernatur sit mollitia, exercitationem accusantium recusandae dolorum dolorem placeat maiores vitae soluta obcaecati voluptatibus fugiat laborum dicta corporis! At.
         Beatae id minima eveniet. Modi esse consequatur consectetur alias commodi quas aliquam numquam quis dolor rerum sint debitis error eligendi accusantium, architecto, quasi ut sapiente quo? Cumque rem possimus pariatur!
     </p>
-
     </main>
 
     <footer>
-        <p>*copyright</p>
-    </footer>
-    
+        <div class="information">
+          <div>
+            <img src="../icons/facebook.png" alt="fc">
+          </div>
+          <div>
+            <img src="../icons/imsta.png" alt="imsta">
+          </div>
+          <div>
+              <img src="../icons/whatsapp.png" alt="whatsapp">
+          </div>
+        </div>
+        <div class="foot">
+        <img src="../imagenes/banner footer.png" alt="footer_banner">
+        <p>& CANDLES LIGHTS by Leidy Cardoso</p>
+        </div>
+      </footer>
 </body>
 </html>
