--- a/pages/blog.html
+++ b/pages/blog.html
@@ -16,16 +16,22 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="h_menu">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./nosotros.html">Nosotros</a></li>
-                    <li><a href="./blog.html">Blog</a></li>
-                    <li><a href="./tienda.html">Tienda</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+        <div class="h_menu">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./nosotros.html">Nosotros</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./tienda.html">Tienda</a></li>
+            <li><a href="./contacto.html">Contacto</a></li>
+          </ul>
+            <div class="logo">
+            <img src="../imagenes/logo.png" alt="logo"></div>
+          </div>
+  
+          <div class="h_principal_banner">
+      <img src="../imagenes/wall.jpg" alt="imagen">
+      </div>
+      </header>
     <main>
         <h4>Bienvenidos al Blog</h4>
         <p>
@@ -44,9 +50,22 @@
  
     </main>
 
-    <footer>
-        <p>*copyright</p>
-    </footer>
-    
-</body>
+        <footer>
+            <div class="information">
+              <div>
+                <img src="../icons/facebook.png" alt="fc">
+              </div>
+              <div>
+                <img src="../icons/imsta.png" alt="imsta">
+              </div>
+              <div>
+                  <img src="../icons/whatsapp.png" alt="whatsapp">
+              </div>
+            </div>
+            <div class="foot">
+            <img src="../imagenes/banner footer.png" alt="footer_banner">
+            <p>& CANDLES LIGHTS by Leidy Cardoso</p>
+            </div>
+          </footer>
+        </body>
 </html>
