--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,53 +12,77 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../estilos/style.css" />
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <title>Candle Lights</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul class="h_menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./tienda.html">Tienda</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-        </nav>
-    </header>
+  <header>
+    <div class="h_menu">
+      <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="./nosotros.html">Nosotros</a></li>
+        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="./tienda.html">Tienda</a></li>
+        <li><a href="./contacto.html">Contacto</a></li>
+      </ul>
+        <div class="logo">
+        <img src="../imagenes/logo.png" alt="logo"></div>
+      </div>
+
+      <div class="h_principal_banner">
+  <img src="../imagenes/wall.jpg" alt="imagen">
+  </div>
+  </header>
 
     <main>
-        <h1>Contacto</h1>
-        <div class="form">
-            <form action="">
-              <label for="nombre">Escribe tu Nombre:</label>
-              <input type="text" name="nombre" id="nombre">
-              <br>
-              <br>
-              <label for="tel">Escribe tu Telefono:</label>
-              <input type="tel" name="tel" id="tel">
-              <br>
-              <br>
-              <label for="apellido">Escribe tu Apellido:</label>
-              <input type="text" name="apellido" id="apellido">
-              <br>
-              <br>
-              <label for="pais_ciudad">Pais-Ciudad:</label>
-              <input type="text" name="pais_ciudad" id="pais_ciudad">
-              <br>
-              <br>
-              <label for="mensaje">Escribe tu Mensaje:</label>
-              <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
-              <br>
-              <br>
-              <input type="submit" value="Enviar">
-            </form>
-        </div>
+        <h1>Contactanos</h1>
+
+                <form>
+                    <div class="row">
+                      <div class="col-2">
+                        <label for="Nombre">Nombre:</label>
+                        <input type="text" class="form-control-sm">
+                      </div>
+                      <div class="col-2">
+                        <label for="apellido">Apellido:</label>
+                        <input type="text" class="form-control-sm">
+                      </div>
+
+                    <div class="row">
+                      <div class="col-2">
+                        <label for="Telefono">Telefono:</label>
+                        <input type="phone" class="form-control-sm">
+                      </div>
+
+                      <div class="col-2">
+                        <label for="e-mail">E-mail:</label>
+                        <input type="text" class="form-control-sm">
+                      </div>
+                    </div>
+            </div>
+            <button type="enviar" class="btn btn-primary bg-success"> Enviar</button>
+          </form>
 
     </main>
 
     <footer>
-        <p>*copyright</p>
-    </footer>
-    
+        <div class="information">
+          <div>
+            <img src="../icons/facebook.png" alt="fc">
+          </div>
+          <div>
+            <img src="../icons/imsta.png" alt="imsta">
+          </div>
+          <div>
+              <img src="../icons/whatsapp.png" alt="whatsapp">
+          </div>
+        </div>
+        <div class="foot">
+        <img src="../imagenes/banner footer.png" alt="footer_banner">
+        <p>& CANDLES LIGHTS by Leidy Cardoso</p>
+        </div>
+      </footer>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
