--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap"rel="stylesheet"/>
-    <link rel="stylesheet" href="./estilos/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap"rel="stylesheet"/><a href="./"></a>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/main.css"/>
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
   <title>Candle Lights</title>
   </head>
@@ -66,22 +67,21 @@
       <div class="colecciones">
         <h1>NUESTRAS COLECCIONES</h1>
       </div>
-
-      <div class="m_tipo_candles">
-        <div>
+      <div class="row">
+        <div class="col-md-4 div_tipos">
           <h3>Candles Premium</h3>
           <p>Nuestras Candles Premium son elaboradas manualmente, personalizadas por y para nuestros clientes con detalles exclusivos dependiendo de sus gustos.</p>
-          <img src="./imagenes/Imagenes index/premium.png" alt="Premium">
+          <img class="img_tipos" src="./imagenes/Imagenes index/premium.png" alt="Premium">
         </div>
-        <div>
+        <div class="col-md-4 div_tipos">
           <h3>Candles de Frutas</h3>
           <p>Nuestras Candles de frutas son elaboradas manualmente, seleccionada por nuestros clientes dependiendo de sus gustos de aroma de frutas.</p>
-          <img src="./imagenes/Imagenes index/fruts.png" alt="Frutas">
+          <img class="img_tipos" src="./imagenes/Imagenes index/fruts.png" alt="Frutas">
         </div>
-        <div>
+        <div class="col-md-4 div_tipos">
           <h3>Candles Aromateraphy</h3>
           <p>Nuestras Candles Aromateraphy son elaboradas manualmente con elementos y hiervas finas, para brindar la sensacion de relajacion y tranquilidad a nuestros clientes.</p>        
-          <img src="./imagenes/Imagenes index/aromateraphy.png" alt="Aromatheraphy">
+          <img class="img_tipos" src="./imagenes/Imagenes index/aromateraphy.png" alt="Aromatheraphy">
         </div>
         </div>
     </main>
@@ -102,5 +102,6 @@
       <p>& CANDLES LIGHTS by Leidy Cardoso</p>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
