--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Leidy Cardoso">
+    <meta name="copyright" content="Propietario del copyright" />
+    <meta name="description" content="Realizamos manualmente todo tipo de velas, con aromas exquisitos.">
+    <meta name="keywords" content="velas, candles, diseño, elegancia, decoracion, familia,aroma, olor, luz, iluminacion">
     <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../estilos/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/yourcode.js"crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/main.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"crossorigin="anonymous"/>
     <title>Candle Lights</title>
 </head>
 <body>
@@ -24,33 +30,43 @@
             <li><a href="./tienda.html">Tienda</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
           </ul>
-            <div class="logo">
-            <img src="../imagenes/logo.png" alt="logo"></div>
-          </div>
-  
-          <div class="h_principal_banner">
+            <img src="../imagenes/logo.png" alt="logo">
+            <div class="h_principal_banner">
       <img src="../imagenes/wall.jpg" alt="imagen">
       </div>
       </header>
     <main>
-        <h4>Bienvenidos al Blog</h4>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis consequuntur tempora accusantium ab aspernatur dolor reiciendis, molestias dignissimos sint veritatis excepturi quaerat ipsa hic quos distinctio quis, deleniti nemo atque.
-            Tenetur, repudiandae mollitia similique consequatur consequuntur cum dolore impedit, dolorem voluptate esse illo, qui eligendi soluta in. Odit ipsa, blanditiis, unde, iste deleniti nam autem molestiae repellendus illo deserunt error.
-            Atque labore maxime expedita nesciunt reiciendis at consequuntur provident, aspernatur corrupti ut? Tenetur consequuntur optio similique labore? Doloribus consequuntur possimus natus voluptate ad provident sequi non in, voluptatibus itaque quis.
-            Architecto eius provident rem nam mollitia atque dolores obcaecati, quo ducimus repudiandae! Unde vero illo deleniti quaerat quo sequi, provident dicta voluptates harum repellat dignissimos deserunt doloribus corporis quasi ipsam.
-            Sint, iusto ex maiores deleniti eius eos molestiae error officia velit iste voluptatem praesentium quam id. Architecto quos, vitae velit cupiditate porro deserunt itaque aliquid nostrum enim non, corporis eveniet.
-            Numquam est ipsum nostrum laudantium, sit accusantium fuga vel ab enim praesentium, doloribus quibusdam. Illo enim, error autem nobis mollitia voluptatum voluptates sequi maiores? Quo nobis corrupti placeat harum ullam!
-            Itaque veritatis aut sit esse, deleniti quas est placeat! Fugit distinctio cumque consectetur amet recusandae. Sint nesciunt mollitia harum quibusdam quis, debitis at optio minus perferendis temporibus ab qui ex.
-            Laboriosam, accusamus eveniet veniam, voluptate excepturi illo, earum architecto eius quod qui perferendis odit optio aliquid. Quae natus tempora officiis nihil tempore, iusto obcaecati. Odio iure explicabo vel sunt placeat.
-            Maxime vel voluptatem, explicabo natus officia in dicta vero, odit sunt, a fugiat atque ut quibusdam qui dolores sequi id. Quae animi itaque sapiente corrupti odio iure cumque, perspiciatis laudantium!
-            Consectetur, itaque reprehenderit dolorem odio corrupti quae eveniet doloribus voluptas at asperiores ad. Veritatis, assumenda impedit, nobis enim voluptate voluptatum autem animi, asperiores facilis alias numquam aut natus architecto deserunt.
-        </p>
-
- 
+        <h3 class="bienvenidos">Bienvenidos al Blog</h3>
+        <div class="carousel">
+          <img src="../imagenes/1 Blog.png" alt="Rincones estrategicos">
+          <div class="carousel d-none d-md-block">
+            <h5>Rincones estrategicos de tu hogar en los que colocar velas</h5>
+            <p>Agregar un toque de calidez y elegancia a tu casa es muy sencillo utilizando velas. 
+              Estas pueden convertirse en el mejor complemento para la decoración de un hogar. 
+              Aunque quedan bien en casi cualquier estancia de la casa, hay ciertos rincones en 
+              los que destacan más. Además, permiten aprovechar más la luz natural que ofrecen. 
+              Puedes elegir los que más te gusten, pero queremos darte una serie de consejos para 
+              hacerlo.</p>
+              <img src="../imagenes/4 Blog.png" alt="Velas relajantes">
+              <div class="carousel d-none d-md-block">
+                <h5>Cómo ambientar tu hogar según la estación del año</h5>
+                <p>La primavera es una estación del año que invita a ambientar tu hogar con velas. 
+                  Ya no solo por la luz, ya que los días comienzan a ser más luminosos. También 
+                  por todos los aromas que hay asociados a esta época del año. La primavera 
+                  huele a flores y frutas frescas, a la brisa marina y a tierra mojada.</p>
+                  <img src="../imagenes/3 Blog.png" alt="Velas relajantes">
+              <div class="carousel d-none d-md-block">
+                <h5>Las velas más relajantes para tu momento de desconexión</h5>
+                <p>Actualmente es habitual llevar un ritmo de vida rápido, sin apenas tiempo
+                  para nada en el día a día. El trabajo, la familia, las rutinas del hogar, 
+                  etc. Todo se acumula y, cuando acaba la jornada, lo único que quieres es
+                  desconectar durante un rato antes de volver a empezar. En esas ocasiones, 
+                  encender algunas velas, es quizás, uno de los momentos más relajantes, sugerentes 
+                  y apetecibles. Se convierte, además, en instantes más especiales para mucha 
+                  gente, porque significa pararse, respirar y dedicarse un rato a uno mismo.</p>
     </main>
-
         <footer>
+
             <div class="information">
               <div>
                 <img src="../icons/facebook.png" alt="fc">
@@ -67,5 +83,6 @@
             <p>& CANDLES LIGHTS by Leidy Cardoso</p>
             </div>
           </footer>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         </body>
 </html>
