--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Leidy Cardoso">
+        <meta name="copyright" content="Propietario del copyright" />
+        <meta name="description" content="Realizamos manualmente todo tipo de velas, con aromas exquisitos.">
+        <meta name="keywords" content="velas, candles, diseño, elegancia, decoracion, familia,aroma, olor, luz, iluminacion">
         <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
@@ -11,7 +15,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../estilos/style.css" />
+        <link rel="stylesheet" href="../css/main.css"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <title>Candle Lights</title>
 </head>
@@ -33,10 +37,8 @@
   <img src="../imagenes/wall.jpg" alt="imagen">
   </div>
   </header>
-
     <main>
-        <h1>Contactanos</h1>
-
+        <h1>Contáctanos</h1>
                 <form>
                     <div class="row">
                       <div class="col-2">
@@ -59,7 +61,11 @@
                         <input type="text" class="form-control-sm">
                       </div>
                     </div>
-            </div>
+                    <div class="mb-3">
+                      <label for="text" class="form-label">Comentarios</label>
+                      <textarea class="form-control" id="text" rows="3"></textarea>
+                    </div>
+                   </div>
             <button type="enviar" class="btn btn-primary bg-success"> Enviar</button>
           </form>
 
