--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,31 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="../favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="../favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="../favicon/favicon-16x16.png"
-    />
+    <meta name="author" content="Leidy Cardoso">
+    <meta name="copyright" content="Propietario del copyright" />
+    <meta name="description" content="Realizamos manualmente todo tipo de velas, con aromas exquisitos.">
+    <meta name="keywords" content="velas, candles, diseño, elegancia, decoracion, familia,aroma, olor, luz, iluminacion">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png"/>
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Belleza&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../estilos/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="../css/main.css" />
+    <title>Candle Lights</title>
   </head>
   <body>
     <header>
@@ -47,7 +35,6 @@
     <img src="../imagenes/wall.jpg" alt="imagen">
     </div>
     </header>
-
     <main>
       <div class="video">
         <iframe
