--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Leidy Cardoso" />
+    <meta name="copyright" content="Propietario del copyright" />
+    <meta name="description"content="Realizamos manualmente todo tipo de velas, con aromas exquisitos."/>
+    <meta name="keywords"content="velas, candles, diseño, elegancia, decoracion, familia,aroma, olor, luz, iluminacion"/>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png"/>
-    <link rel="icon"type="image/png"sizes="16x16"href="./favicon/favicon-16x16.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png"/>
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap"rel="stylesheet"/><a href="./"></a>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css"/>
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-  <title>Candle Lights</title>
+    <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="./css/main.css" />
+    <script src="https://kit.fontawesome.com/yourcode.js"crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"crossorigin="anonymous"/>
+    <title>Candle Lights</title>
   </head>
   <body>
     <header>
@@ -26,42 +30,34 @@
           <li><a href="pages/tienda.html">Tienda</a></li>
           <li><a href="pages/contacto.html">Contacto</a></li>
         </ul>
-          <div class="logo">
-          <img src="./imagenes/logo.png" alt="logo"></div>
+        <div class="logo">
+          <img src="./imagenes/logo.png" alt="logo" />
         </div>
-        <div class="h_principal_banner">
-    <img src="./imagenes/wall.jpg" alt="imagen">
-    </div>
+      </div>
+      <div class="h_principal_banner">
+        <img src="./imagenes/wall.jpg" alt="imagen" />
+      </div>
     </header>
     <main>
       <p class="m_parrafo">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo facilis
-        fugit at suscipit! Sunt aut ad nihil temporibus sapiente obcaecati
-        itaque necessitatibus laborum praesentium placeat cumque, blanditiis
-        incidunt, rerum officiis. Ipsum repellendus, aliquam repellat ut
-        excepturi illo itaque sed quisquam quidem? Delectus blanditiis ullam sed
-        eaque rerum ratione aspernatur obcaecati a libero. Recusandae,
-        consequatur laudantium autem dignissimos asperiores earum eveniet.
-        Minima autem quam rem quod illum, accusantium dolores aliquam tempore,
-        facere, eum non expedita sed ullam. Aliquid, aperiam? Aliquid minima
-        nulla voluptas consequuntur dolore, eum voluptate ducimus officiis qui
-        dolorem. Illo ex facilis necessitatibus dignissimos quod. Veritatis
-        provident saepe ex delectus. Ab iste laudantium impedit culpa
-        repellendus inventore iure ullam eos eveniet assumenda, laborum
-        voluptate nesciunt quas, et odit libero? Laudantium fugit itaque quo
-        dolor, commodi assumenda, et pariatur, voluptas quis nesciunt vitae
-        perspiciatis dicta rem hic esse tenetur sit magni. In sit quo repellat
-        cum dolorum pariatur, ipsum suscipit? Dignissimos reprehenderit enim
-        ipsa nam magnam! Voluptates expedita voluptatum optio assumenda voluptas
-        reprehenderit laborum omnis dolorum earum hic eos quidem soluta,
-        possimus deleniti, placeat cumque nihil, quod non modi obcaecati. Rerum
-        assumenda molestias dolores maiores, at soluta quibusdam sequi totam
-        architecto dignissimos ullam accusamus iure ipsum. Suscipit ducimus
-        eveniet, veritatis veniam nulla, commodi eaque aliquid, quasi
-        repellendus modi rem unde. Incidunt architecto consequuntur atque fugiat
-        exercitationem in earum animi at doloribus tenetur nesciunt natus
-        reprehenderit maxime voluptate est, delectus, quam iure numquam cumque
-        optio. Eligendi exercitationem dolores dicta eaque eius.
+        Somos Candles Lights Nuestra misión es crear velas con aromas cautivadores,
+        hermoso diseño y los mejores ingredientes. Nuestros aromas de ensueño
+        están inspirados en la naturaleza, los viajes, la cultura, los momentos
+        y los recuerdos, creamos velas que sean seguras para todos; sin productos
+        químicos agresivos. Usamos cera de soya 100% derivada de frijoles de
+        soya cultivados en Estados Unidos para una combustión limpia y ecológica
+        y mechas de algodón sin plomo. Nuestras velas son libres de petróleo,
+        crueldad y 100% veganas. Somos una empresa con conciencia ecológica,
+        nuestros recipientes para velas están hechos de vidrio reciclado y
+        también son perfectos para reutilizar. Todas nuestras velas se fabrican
+        en pequeños lotes en Texas. Nosotros hacemos todo, desde
+        pegar la mecha, verter, diseñar y aplicar las etiquetas hasta empaquetar
+        y enviar; Candles Lights. No hay atajos y no hay automatización. Es un
+        proceso del viejo mundo que requiere paciencia y compromiso. Candles Lights
+        nació de la creencia de que la fragancia correcta puede hacer que los
+        momentos cotidianos se sientan extraordinarios.​ Todos mis productos en
+        mi tienda han sido seleccionados y diseñados cuidadosamente, exclusivos para 
+        nuestra propia tienda.
       </p>
 
       <div class="colecciones">
@@ -70,38 +66,58 @@
       <div class="row">
         <div class="col-md-4 div_tipos">
           <h3>Candles Premium</h3>
-          <p>Nuestras Candles Premium son elaboradas manualmente, personalizadas por y para nuestros clientes con detalles exclusivos dependiendo de sus gustos.</p>
-          <img class="img_tipos" src="./imagenes/Imagenes index/premium.png" alt="Premium">
+          <p>
+            Nuestras Candles Premium son elaboradas manualmente, personalizadas
+            por y para nuestros clientes con detalles exclusivos dependiendo de
+            sus gustos.
+          </p>
+          <img
+            class="img_tipos"
+            src="./imagenes/Imagenes index/premium.png"
+            alt="Premium"
+          />
         </div>
         <div class="col-md-4 div_tipos">
           <h3>Candles de Frutas</h3>
-          <p>Nuestras Candles de frutas son elaboradas manualmente, seleccionada por nuestros clientes dependiendo de sus gustos de aroma de frutas.</p>
-          <img class="img_tipos" src="./imagenes/Imagenes index/fruts.png" alt="Frutas">
+          <p>
+            Nuestras Candles de frutas son elaboradas manualmente, seleccionada
+            por nuestros clientes dependiendo de sus gustos de aroma de frutas.
+          </p>
+          <img
+            class="img_tipos"
+            src="./imagenes/Imagenes index/fruts.png"
+            alt="Frutas"
+          />
         </div>
         <div class="col-md-4 div_tipos">
           <h3>Candles Aromateraphy</h3>
-          <p>Nuestras Candles Aromateraphy son elaboradas manualmente con elementos y hiervas finas, para brindar la sensacion de relajacion y tranquilidad a nuestros clientes.</p>        
-          <img class="img_tipos" src="./imagenes/Imagenes index/aromateraphy.png" alt="Aromatheraphy">
+          <p>
+            Nuestras Candles Aromateraphy son elaboradas manualmente con
+            elementos y hiervas finas, para brindar la sensacion de relajacion y
+            tranquilidad a nuestros clientes.
+          </p>
+          <img
+            class="img_tipos"
+            src="./imagenes/Imagenes index/aromateraphy.png"
+            alt="Aromatheraphy"
+          />
         </div>
-        </div>
+      </div>
     </main>
     <footer>
       <div class="information">
-        <div>
-          <img src="./icons/facebook.png" alt="fc">
-        </div>
-        <div>
-          <img src="./icons/imsta.png" alt="imsta">
-        </div>
-        <div>
-            <img src="./icons/whatsapp.png" alt="whatsapp">
-        </div>
+          <img src="./icons/facebook.png" alt="fc" />
+          <img src="./icons/imsta.png" alt="imsta" />
+          <img src="./icons/whatsapp.png" alt="whatsapp"/>
       </div>
       <div class="foot">
-      <img src="./imagenes/banner footer.png" alt="footer_banner">
-      <p>& CANDLES LIGHTS by Leidy Cardoso</p>
+        <img src="./imagenes/banner footer.png" alt="footer_banner" />
+        <p>& CANDLES LIGHTS by Leidy Cardoso</p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"></script>
   </body>
 </html>
