--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,14 +5,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Leidy Cardoso">
+        <meta name="copyright" content="Propietario del copyright" />
+        <meta name="description" content="Realizamos manualmente todo tipo de velas, con aromas exquisitos.">
+        <meta name="keywords" content="velas, candles, diseño, elegancia, decoracion, familia,aroma, olor, luz, iluminacion">
         <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../estilos/style.css"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../css/main.css"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"crossorigin="anonymous"/>
+        <title>Candle Lights</title>
 </head>
 <body>
     <header>
@@ -27,38 +33,36 @@
             <div class="logo">
             <img src="../imagenes/logo.png" alt="logo"></div>
           </div>
-  
           <div class="h_principal_banner">
       <img src="../imagenes/wall.jpg" alt="imagen">
       </div>
       </header>
-
     <main>
-        <h2>Nuestros Productos</h2>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, temporibus veniam veritatis expedita, quam harum fugit autem atque id quidem, est distinctio non? Molestiae maiores nobis delectus facere nisi earum!
-        Magnam dolore voluptatum consectetur laboriosam quis, vel eius mollitia in recusandae aut accusamus animi, sed dolores numquam. Et vitae delectus facere voluptas vel, atque officia magnam omnis, dolorem dolor necessitatibus.
-        Delectus fugit sed doloremque harum architecto ab animi praesentium. Maiores, vitae, tempora iusto perspiciatis, nisi ipsum consequatur magnam temporibus veritatis recusandae consectetur qui a beatae rerum ullam vero nam. Debitis.
-        Hic ea delectus, magnam quos reprehenderit repellat. Quasi architecto, iusto dignissimos tempore nihil corporis omnis nemo quidem aliquam recusandae sed fugit eligendi! Officiis, itaque repellat quia eum suscipit asperiores rem.
-        Et, ut. Ratione ex quasi atque, blanditiis voluptatem eos optio, beatae aperiam laborum cupiditate impedit, veritatis voluptatum vero iste libero eum labore laudantium! Ratione consequuntur quo enim, et ex quaerat!
-        Blanditiis in animi nulla labore voluptatum, sed molestiae nam dignissimos culpa eaque sint ut, soluta facilis itaque libero voluptates eius unde amet fuga ratione? Esse distinctio magni ad modi doloribus!
-        Nesciunt dolor expedita sint vero fugit, quam laboriosam sequi culpa asperiores animi hic quos harum temporibus impedit amet molestias totam nobis nostrum praesentium quis officiis est magnam. Quisquam, accusantium ducimus.
-        Facere officia voluptas suscipit. Non, dignissimos magni. Delectus provident quaerat eligendi! Animi quam, ipsum eaque ab hic cumque. Iure cupiditate repellat quod tempora iste error voluptatem consequatur debitis ut consectetur!
-        Repellat non sequi asperiores, corrupti accusamus dolor magni possimus, perspiciatis beatae nulla ipsum hic quis eius consequatur itaque nam est consectetur impedit porro a autem omnis voluptates vel? Pariatur, perferendis!
-        Obcaecati et similique deserunt tempore, repellat ipsam reprehenderit possimus non hic architecto sed ad cumque perspiciatis maxime cum aliquam modi alias porro deleniti corrupti? Sapiente praesentium ipsa atque earum quod.
-        Amet consequuntur inventore voluptate fugit quidem quam, dolorum minima omnis necessitatibus quia, doloremque incidunt voluptas recusandae? Consequatur rerum tempora earum delectus, voluptate est eos perferendis, cum nostrum ducimus vitae ratione!
-        Unde enim consequatur nemo libero, laudantium, doloremque quae sint consequuntur odit soluta est animi delectus explicabo possimus aperiam distinctio itaque maxime ipsa saepe deleniti adipisci aut, nulla totam quos. Deleniti?
-        Ipsam ex eligendi sapiente reprehenderit ratione voluptates aliquid voluptas natus earum necessitatibus rerum nemo ullam quos iste nostrum facere, nesciunt, perferendis quibusdam voluptatem. A porro, qui totam fuga id iste.
-        Dolorem iste quidem ullam ab, consequuntur hic numquam ipsam id. Eligendi ipsa maiores possimus? Nemo consequuntur tempora, odit perspiciatis accusamus non sit, quibusdam ducimus, asperiores explicabo optio? Excepturi, necessitatibus earum!
-        Nisi quibusdam suscipit, asperiores voluptatem blanditiis iusto vel dolorum nemo et est sequi sit. Debitis dolores dolorum repudiandae necessitatibus odio? Atque suscipit voluptate temporibus sequi fugit laudantium error quibusdam earum?
-        Voluptatum, cumque esse? Facere at nesciunt unde, autem ullam, eum eaque aliquam quos beatae deserunt tempora. Repudiandae expedita quidem a dolor necessitatibus? Dolorum architecto totam velit distinctio ullam molestiae ex!
-        Alias in illo voluptate ducimus modi maiores culpa nostrum optio doloribus libero repudiandae repellat fuga, eius magni iusto pariatur. Veritatis omnis suscipit eius nisi beatae corrupti perspiciatis pariatur commodi excepturi.
-        Harum eaque voluptates assumenda vel ullam quaerat est. Impedit possimus tenetur illum dolorem? Error architecto doloribus corrupti amet, iure iusto soluta ea voluptatum quisquam numquam earum odio. Eos, rerum animi?
-        Repellendus iste repudiandae hic doloribus, quos molestiae, corrupti voluptas deserunt id aspernatur sit mollitia, exercitationem accusantium recusandae dolorum dolorem placeat maiores vitae soluta obcaecati voluptatibus fugiat laborum dicta corporis! At.
-        Beatae id minima eveniet. Modi esse consequatur consectetur alias commodi quas aliquam numquam quis dolor rerum sint debitis error eligendi accusantium, architecto, quasi ut sapiente quo? Cumque rem possimus pariatur!
-    </p>
+        <h2 class="tienda_title">Nuestros Productos</h2>
+                            <div class="container text-center">
+                      <div class="row align-items-start">
+                        <div class="col">
+                          <img src="../imagenes/tienda/1.png" alt="1">
+                        </div>
+                        <div class="col">
+                          <img src="../imagenes/tienda/2.png" alt="2">
+                        </div>
+                        <div class="col">
+                         <img src="../imagenes/tienda/3.png" alt="3">
+                        </div>
+                        </div>
+                      <div class="row align-items-center">
+                        <div class="col">
+                         <img src="../imagenes/tienda/4.png" alt="4">
+                        </div>
+                        <div class="col">
+                         <img src="../imagenes/tienda/5.png" alt="5">
+                        </div>
+                        <div class="col">
+                         <img src="../imagenes/tienda/6.png" alt="6">
+                        </div>
+                    </div>
     </main>
-
     <footer>
         <div class="information">
           <div>
@@ -76,5 +80,9 @@
         <p>& CANDLES LIGHTS by Leidy Cardoso</p>
         </div>
       </footer>
+      <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"></script>
 </body>
 </html>
