--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -38,30 +38,83 @@
       </div>
       </header>
     <main>
-        <h2 class="tienda_title">Nuestros Productos</h2>
-                            <div class="container text-center">
-                      <div class="row align-items-start">
-                        <div class="col">
-                          <img src="../imagenes/tienda/1.png" alt="1">
+      <h2 class="tienda_title">Nuestros Productos</h2>
+
+      <section class="productos-6">
+        <div class="container px-4 px-lg-5 mt-5">
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <img class="card-img" src="../imagenes/tienda/1.png" alt="primer_producto" />
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <h5 class="fw-bolder">Vela Clasica</h5>
+                              <h4>$20.00</h4>
+                            </div>
                         </div>
-                        <div class="col">
-                          <img src="../imagenes/tienda/2.png" alt="2">
+                        <button type="button" class="btn btn-outline-dark">Comprar</button>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <img class="card-img" src="../imagenes/tienda/2.png" alt="segundo_producto" />
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <h5 class="fw-bolder">Vela Aromatizante 2*1</h5>
+                                <h4>$30.00</h4>
+                            </div>
                         </div>
-                        <div class="col">
-                         <img src="../imagenes/tienda/3.png" alt="3">
-                        </div>
-                        </div>
-                      <div class="row align-items-center">
-                        <div class="col">
-                         <img src="../imagenes/tienda/4.png" alt="4">
-                        </div>
-                        <div class="col">
-                         <img src="../imagenes/tienda/5.png" alt="5">
-                        </div>
-                        <div class="col">
-                         <img src="../imagenes/tienda/6.png" alt="6">
+                          <button type="button" class="btn btn-outline-dark">Comprar</button>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                  <div class="card h-100">
+                      <img class="card-img" src="../imagenes/tienda/3.png" alt="segundo_producto" />
+                      <div class="card-body p-4">
+                          <div class="text-center">
+                              <h5 class="fw-bolder">Vela romana</h5>
+                              <h4>$40.00</h4>
+                          </div>
+                      </div>
+                        <button type="button" class="btn btn-outline-dark">Comprar</button>
+                  </div>
+              </div>
+              <div class="col mb-5">
+                <div class="card h-100">
+                    <img class="card-img" src="../imagenes/tienda/4.png" alt="segundo_producto" />
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <h5 class="fw-bolder">Vela especial</h5>
+                            <h4>$50.00</h4>
                         </div>
                     </div>
+                      <button type="button" class="btn btn-outline-dark">Comprar</button>
+                </div>
+            </div>
+            <div class="col mb-5">
+              <div class="card h-100">
+                  <img class="card-img" src="../imagenes/tienda/5.png" alt="segundo_producto" />
+                  <div class="card-body p-4">
+                      <div class="text-center">
+                          <h5 class="fw-bolder">Vela Frutal</h5>
+                          <h4>$43.00</h4>
+                      </div>
+                  </div>
+                    <button type="button" class="btn btn-outline-dark">Comprar</button>
+              </div>
+          </div>
+          <div class="col mb-5">
+            <div class="card h-100">
+                <img class="card-img" src="../imagenes/tienda/6.png" alt="segundo_producto" />
+                <div class="card-body p-4">
+                    <div class="text-center">
+                        <h5 class="fw-bolder">Vela sweet</h5>
+                        <h4>$43.00</h4>
+                    </div>
+                </div>
+                  <button type="button" class="btn btn-outline-dark">Comprar</button>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="information">
