--- a/pages/blog.html
+++ b/pages/blog.html
@@ -36,39 +36,53 @@
       </div>
       </header>
     <main>
-
-
-
-
-      
-        <h3 class="bienvenidos">Bienvenidos al Blog</h3>
-        <div class="carousel">
-          <img src="../imagenes/1 Blog.png" alt="Rincones estrategicos">
-          <div class="carousel d-none d-md-block">
-            <h5>Rincones estrategicos de tu hogar en los que colocar velas</h5>
+      <div id="carouselBlog" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselBlog" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselBlog" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselBlog" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h5>RINCONES ESTRATEGICOS PARA COLOCAR TUS VELAS</h5>
             <p>Agregar un toque de calidez y elegancia a tu casa es muy sencillo utilizando velas. 
               Estas pueden convertirse en el mejor complemento para la decoración de un hogar. 
               Aunque quedan bien en casi cualquier estancia de la casa, hay ciertos rincones en 
               los que destacan más. Además, permiten aprovechar más la luz natural que ofrecen. 
               Puedes elegir los que más te gusten, pero queremos darte una serie de consejos para 
               hacerlo.</p>
-              <img src="../imagenes/4 Blog.png" alt="Velas relajantes">
-              <div class="carousel d-none d-md-block">
-                <h5>Cómo ambientar tu hogar según la estación del año</h5>
-                <p>La primavera es una estación del año que invita a ambientar tu hogar con velas. 
-                  Ya no solo por la luz, ya que los días comienzan a ser más luminosos. También 
-                  por todos los aromas que hay asociados a esta época del año. La primavera 
-                  huele a flores y frutas frescas, a la brisa marina y a tierra mojada.</p>
-                  <img src="../imagenes/3 Blog.png" alt="Velas relajantes">
-              <div class="carousel d-none d-md-block">
-                <h5>Las velas más relajantes para tu momento de desconexión</h5>
-                <p>Actualmente es habitual llevar un ritmo de vida rápido, sin apenas tiempo
-                  para nada en el día a día. El trabajo, la familia, las rutinas del hogar, 
-                  etc. Todo se acumula y, cuando acaba la jornada, lo único que quieres es
-                  desconectar durante un rato antes de volver a empezar. En esas ocasiones, 
-                  encender algunas velas, es quizás, uno de los momentos más relajantes, sugerentes 
-                  y apetecibles. Se convierte, además, en instantes más especiales para mucha 
-                  gente, porque significa pararse, respirar y dedicarse un rato a uno mismo.</p>
+            <img src="../imagenes/1 Blog.png" alt="blog1">
+          </div>
+          <div class="carousel-item">
+            <h5>COMO AMBIENTAR TU HOGAR SEGUN LA ESTACION DEL AÑO </h5>
+            <p>La primavera es una estación del año que invita a ambientar tu hogar con velas. 
+              Ya no solo por la luz, ya que los días comienzan a ser más luminosos. También 
+              por todos los aromas que hay asociados a esta época del año. La primavera 
+              huele a flores y frutas frescas, a la brisa marina y a tierra mojada.</p>
+            <img src="../imagenes/3 Blog.png" alt="blog2">
+          </div>
+          <div class="carousel-item">
+            <h5>LAS VELAS MAS RELAJANTES PARA TU MOMENTO DE DESCONEXION</h5>
+            <p>Actualmente es habitual llevar un ritmo de vida rápido, sin apenas tiempo
+              para nada en el día a día. El trabajo, la familia, las rutinas del hogar, 
+              etc. Todo se acumula y, cuando acaba la jornada, lo único que quieres es
+              desconectar durante un rato antes de volver a empezar. En esas ocasiones, 
+              encender algunas velas, es quizás, uno de los momentos más relajantes, sugerentes 
+              y apetecibles. Se convierte, además, en instantes más especiales para mucha 
+              gente, porque significa pararse, respirar y dedicarse un rato a uno mismo.</p>
+            <img src="../imagenes/4 Blog.png" alt="blog3">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselBlog" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselBlog" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
     </main>
         <footer>
 
