--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="../css/main.css" />
+
     <title>Candle Lights</title>
   </head>
   <body>
@@ -36,34 +37,32 @@
     </div>
     </header>
     <main>
+      <h3 class="miranos">Miranos Aqui!</h3>
       <div class="video">
         <iframe
-          width="560"
-          height="315"
+          width="550"
+          height="300"
           src="https://www.youtube.com/embed/WnEVgybYmMI"
           title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
+          frameborder="1"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
       </div>
     </main>
     <footer>
-        <div class="information">
-          <div>
-            <img src="../icons/facebook.png" alt="fc">
-          </div>
-          <div>
-            <img src="../icons/imsta.png" alt="imsta">
-          </div>
-          <div>
-              <img src="../icons/whatsapp.png" alt="whatsapp">
-          </div>
-        </div>
-        <div class="foot">
-        <img src="../imagenes/banner footer.png" alt="footer_banner">
+      <div class="information">
+          <img src="../icons/facebook.png" alt="fc" />
+          <img src="../icons/imsta.png" alt="imsta" />
+          <img src="../icons/whatsapp.png" alt="whatsapp"/>
+      </div>
+      <div class="foot">
+        <img src="../imagenes/banner footer.png" alt="footer_banner" />
         <p>& CANDLES LIGHTS by Leidy Cardoso</p>
-        </div>
+      </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"></script>
   </body>
 </html>
