--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -39,9 +39,7 @@
     <main>
       <h3 class="miranos">Miranos Aqui!</h3>
       <div class="video">
-        <iframe
-          width="550"
-          height="300"
+        <iframe class="responsive-iframe"
           src="https://www.youtube.com/embed/WnEVgybYmMI"
           title="YouTube video player"
           frameborder="1"
