--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,7 +40,8 @@
     <main>
         <h1>Contáctanos</h1>
                 <form>
-                    <div class="row">
+                  <div class="container">
+                    <div class="row-2">
                       <div class="col-2">
                         <label for="Nombre">Nombre:</label>
                         <input type="text" class="form-control-sm">
@@ -49,8 +50,9 @@
                         <label for="apellido">Apellido:</label>
                         <input type="text" class="form-control-sm">
                       </div>
+                    </div>
 
-                    <div class="row">
+                    <div class="row-2">
                       <div class="col-2">
                         <label for="Telefono">Telefono:</label>
                         <input type="phone" class="form-control-sm">
@@ -61,16 +63,14 @@
                         <input type="text" class="form-control-sm">
                       </div>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-1">
                       <label for="text" class="form-label">Comentarios</label>
-                      <textarea class="form-control" id="text" rows="3"></textarea>
-                    </div>
+                      <textarea class="form-control" id="text" rows="2" cols="2"></textarea>
                    </div>
             <button type="enviar" class="btn btn-primary bg-success"> Enviar</button>
           </form>
-
+          </div>
     </main>
-
     <footer>
         <div class="information">
           <div>
