--- a/pages/blog.html
+++ b/pages/blog.html
@@ -22,18 +22,20 @@
 </head>
 <body>
     <header>
-        <div class="h_menu">
-          <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./nosotros.html">Nosotros</a></li>
-            <li><a href="./blog.html">Blog</a></li>
-            <li><a href="./tienda.html">Tienda</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-          </ul>
-            <img src="../imagenes/logo.png" alt="logo">
-            <div class="h_principal_banner">
-      <img src="../imagenes/wall.jpg" alt="imagen">
-      </div>
+      <div class="h_menu">
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="./nosotros.html">Nosotros</a></li>
+          <li><a href="./blog.html">Blog</a></li>
+          <li><a href="./tienda.html">Tienda</a></li>
+          <li><a href="./contacto.html">Contacto</a></li>
+        </ul>
+          <div class="logo">
+          <img src="../imagenes/logo.png" alt="logo"></div>
+        </div>
+        <div class="h_principal_banner">
+    <img src="../imagenes/wall.jpg" alt="imagen">
+    </div>
       </header>
     <main>
       <div id="carouselBlog" class="carousel slide" data-bs-ride="true">
