--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,9 +63,9 @@
                         <input type="text" class="form-control-sm">
                       </div>
                     </div>
-                    <div class="mb-1">
-                      <label for="text" class="form-label">Comentarios</label>
-                      <textarea class="form-control" id="text" rows="2" cols="2"></textarea>
+                    <div class="sm-2">
+                      <label for="text" class="form-label">Comentarios:</label>
+                      <textarea class="form-control" id="text" rows="2"></textarea>
                    </div>
             <button type="enviar" class="btn btn-primary bg-success"> Enviar</button>
           </form>
